--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    implementation 'com.diegodobelo.expandingview:expanding-view:0.9.4'
     implementation 'com.github.michaldrabik:TapBarMenu:1.0.6'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
-}
+    implementation 'com.etebarian:meow-bottom-navigation:1.0.4'
+    implementation 'com.github.iammert:ReadableBottomBar:0.2'
+ }
