--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,23 +6,30 @@
     <dist:module dist:instant="true" />
 
     <application
-        android:allowBackup="true"
         android:name=".App"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".Activities.TapBarMenu.TapBarMenu"
-            android:theme="@style/AppTheme"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".Activities.FluidBottomNav.FluidBottomNav"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".Activities.ReadableBottomBar.ReadableBottomNav" />
+        <activity
+            android:name=".Activities.MeowBottomNav.MeowNavBottom"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".Activities.TapBarMenu.TapBarMenu"
+            android:theme="@style/AppTheme" />
         <activity android:name=".MainActivity">
+            android:windowSoftInputMode="stateHidden|stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
