--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
 
     implementation 'com.tbuonomo:creative-viewpager:1.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    compile 'com.github.applikeysolutions:orionpreview:1.0.1'
 }
