--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,38 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activities.Ripple.Rippleeffect"></activity>
+        android:theme="@style/AppThemeMain">
+        <activity android:name=".Activities.Ripple.Rippleeffect"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity android:name=".Activities.ViewAnimation.MyActivity"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity android:name=".Activities.ViewAnimation.ExampleActivity"
+            android:theme="@style/AppTheme"
+            />
+
         <activity
             android:name=".Activities.CardPreviewAnim.CardPreview"
             android:theme="@style/AppThemeNo" />
-        <activity android:name=".Activities.ViewPagerTransformation.ViewPagerTransformation" />
-        <activity android:name=".Activities.CreativeViewPager.CreativeViewPager" />
-        <activity android:name=".Activities.BannerSlider.BannerSlider" />
-        <activity android:name=".Activities.SmartiestImageSlider.SmartiestImageSlider" />
-        <activity android:name=".Activities.ViewPagerTransformation.TransformationActivity" />
-        <activity android:name=".Activities.ViewPagerTransformation.CircularViewPager" />
+        <activity android:name=".Activities.ViewPagerTransformation.ViewPagerTransformation"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".Activities.CreativeViewPager.CreativeViewPager"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".Activities.BannerSlider.BannerSlider"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".Activities.SmartiestImageSlider.SmartiestImageSlider"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".Activities.ViewPagerTransformation.TransformationActivity"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".Activities.ViewPagerTransformation.CircularViewPager"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".Activities.FluidBottomNav.FluidBottomNav"
-            android:screenOrientation="portrait" />
-        <activity android:name=".Activities.ReadableBottomBar.ReadableBottomNav" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".Activities.ReadableBottomBar.ReadableBottomNav"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".Activities.MeowBottomNav.MeowNavBottom"
             android:theme="@style/AppTheme" />
