--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
 
     compile 'com.desarrollodroide:fragmenttransactionextended:1'
 
+    compile 'com.github.yalantis:Side-Menu.Android:1.0.1'
+    implementation 'com.github.ozodrukh:CircularReveal:2.1.0'
+
 }
