--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,78 @@
         <activity android:name=".Activities.ContextMenu.ContextMenu"
             android:configChanges="orientation|screenSize" />
 
+
+        <activity
+            android:name=".Activities.MikepenzeNav.MaterialDrawerActivity"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.CompactHeaderDrawerActivity"
+            android:label="@string/drawer_item_compact_header"
+            android:theme="@style/CustomTheme" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.ActionBarActivity"
+            android:label="@string/drawer_item_action_bar_drawer"
+            android:theme="@style/MaterialDrawerTheme.ActionBar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.MultiDrawerActivity"
+            android:label="@string/drawer_item_multi_drawer"
+            android:theme="@style/MaterialDrawerTheme.TranslucentStatus" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.NonTranslucentDrawerActivity"
+            android:label="@string/drawer_item_non_translucent_status_drawer"
+            android:theme="@style/MaterialDrawerTheme" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.AdvancedDrawerActivity"
+            android:label="@string/drawer_item_advanced_drawer"
+            android:theme="@style/MaterialDrawerTheme.TranslucentStatus" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.EmbeddedDrawerActivity"
+            android:label="@string/drawer_item_embedded_drawer"
+            android:theme="@style/MaterialDrawerTheme" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.FullscreenDrawerActivity"
+            android:label="@string/drawer_item_fullscreen_drawer"
+            android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.CustomContainerActivity"
+            android:label="@string/drawer_item_custom_container_drawer"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.MenuDrawerActivity"
+            android:label="@string/drawer_item_menu_drawer"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.FragmentDrawerActivity"
+            android:label="@string/drawer_item_fragment_drawer"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.originalactivities.MiniDrawerActivity"
+            android:label="@string/drawer_item_mini_drawer"
+            android:theme="@style/MaterialDrawerTheme" />
+        <activity
+            android:name=".Activities.MikepenzeNav.newactivities.DrawerItemTypesActivity"
+            android:label="Drawer item types"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.newactivities.AccountHeaderActivity"
+            android:label="Account header options"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.newactivities.ListenersActivity"
+            android:label="Listeners"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.newactivities.BadgesActivity"
+            android:label="Badges"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+        <activity
+            android:name=".Activities.MikepenzeNav.newactivities.HeaderFooterActivity"
+            android:label="Header and footer"
+            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar" />
+
+
+
+
         <activity android:name=".MainActivity">
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden">
             <intent-filter>
@@ -71,6 +143,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
