--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
     implementation 'com.mikepenz:fontawesome-typeface:5.3.1.2-kotlin@aar'
     implementation 'com.mikepenz:octicons-typeface:3.2.0.6-kotlin@aar'
 
+
+    compile 'com.yarolegovich:sliding-root-nav:1.1.0'
+
 }
