--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
         <activity android:name=".Activities.ContextMenu.ContextMenu"
             android:configChanges="orientation|screenSize" />
 
+        <activity android:name=".Activities.SlidingRootNav.SlidingRootNavActivity"
+            android:theme="@style/AppThemeNo"/>
+
 
         <activity
             android:name=".Activities.MikepenzeNav.MaterialDrawerActivity"
