--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
 
     compile 'com.yarolegovich:sliding-root-nav:1.1.0'
 
+    implementation 'com.github.Chrisvin:LiquidSwipe:1.3'
+    implementation 'com.airbnb.android:lottie:3.2.0'
+
 }
