--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
@@ -92,5 +96,10 @@ dependencies {
 
     implementation 'com.github.Chrisvin:LiquidSwipe:1.3'
     implementation 'com.airbnb.android:lottie:3.2.0'
+
+    implementation 'uk.co.samuelwall:material-tap-target-prompt:3.0.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
 
 }
