--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
             android:theme="@style/AppTheme"/>
         <activity android:name=".Activities.ViewPagerTransformation.CircularViewPager"
             android:theme="@style/AppTheme"/>
+
+        <activity android:name=".Activities.FloatingNav.FloatingNav"
+            android:theme="@style/AppThemeNo"/>
+
         <activity
             android:name=".Activities.FluidBottomNav.FluidBottomNav"
             android:screenOrientation="portrait"
