--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "com.nilprojects.androiduidesign"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -133,4 +133,14 @@ dependencies {
 
     implementation 'com.wajahatkarim3.easyflipviewpager:easyflipviewpager:1.0.0'
     implementation 'me.relex:circleindicator:2.1.4'
+
+
+    implementation 'com.ramotion.foldingcell:folding-cell:1.2.3'
+
+    compile 'com.diegodobelo.expandingview:expanding-view:0.9.4'
+
+    implementation 'com.tapadoo.android:alerter:5.1.2'
+
+    implementation "com.github.skydoves:expandablelayout:1.0.3"
+    implementation "com.github.skydoves:baserecyclerviewadapter:0.1.3"
 }
