--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "com.nilprojects.androiduidesign"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.3"
+        versionCode 4
+        versionName "1.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -69,7 +69,6 @@ dependencies {
 
     implementation 'com.github.michaldrabik:TapBarMenu:1.0.6'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'com.etebarian:meow-bottom-navigation:1.0.4'
     implementation 'com.github.iammert:ReadableBottomBar:0.2'
 
@@ -119,6 +118,9 @@ dependencies {
 
     compile 'com.github.rubensousa:floatingtoolbar:1.5.1'
 
+
+    implementation 'io.github.inflationx:calligraphy3:3.1.1'
+    implementation 'io.github.inflationx:viewpump:2.0.3'
 
 
     compile 'com.github.feeeei:CircleSeekbar:v1.1.2'
