--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,4 +145,6 @@ dependencies {
 
     implementation "com.github.skydoves:expandablelayout:1.0.3"
     implementation "com.github.skydoves:baserecyclerviewadapter:0.1.3"
+
+    compile 'com.agilie:interface-interaction:1.0'
 }
