--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,12 +82,12 @@ dependencies {
     implementation 'com.github.applikeysolutions:orionpreview:1.0.1'
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
 
-    compile 'com.daimajia.easing:library:2.0@aar'
-    compile 'com.daimajia.androidanimations:library:2.3@aar'
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
 
-    compile 'com.desarrollodroide:fragmenttransactionextended:1'
+    implementation 'com.desarrollodroide:fragmenttransactionextended:1'
 
-    compile 'com.github.yalantis:Side-Menu.Android:1.0.1'
+    implementation 'com.github.yalantis:Side-Menu.Android:1.0.1'
     implementation 'com.github.ozodrukh:CircularReveal:2.1.0'
 
     implementation 'com.github.Yalantis:Context-Menu.Android:1.1.4'
@@ -101,7 +101,7 @@ dependencies {
     implementation 'com.mikepenz:octicons-typeface:3.2.0.6-kotlin@aar'
 
 
-    compile 'com.yarolegovich:sliding-root-nav:1.1.0'
+    implementation 'com.yarolegovich:sliding-root-nav:1.1.0'
 
     implementation 'com.github.Chrisvin:LiquidSwipe:1.3'
     implementation 'com.airbnb.android:lottie:3.2.0'
@@ -114,23 +114,23 @@ dependencies {
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
 
 
-    compile 'com.aurelhubert:ahbottomnavigation:2.3.4'
+    implementation 'com.aurelhubert:ahbottomnavigation:2.3.4'
 
-    compile 'com.github.rubensousa:floatingtoolbar:1.5.1'
+    implementation 'com.github.rubensousa:floatingtoolbar:1.5.1'
 
 
     implementation 'io.github.inflationx:calligraphy3:3.1.1'
     implementation 'io.github.inflationx:viewpump:2.0.3'
 
 
-    compile 'com.github.feeeei:CircleSeekbar:v1.1.2'
-    compile 'com.robohorse.pagerbullet:pagerbullet:1.0.8'
-    compile 'com.github.hackware1993:MagicIndicator:1.5.0'
-    compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
-    compile 'com.wunderlist:sliding-layer:1.2.5'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.github.feeeei:CircleSeekbar:v1.1.2'
+    implementation 'com.robohorse.pagerbullet:pagerbullet:1.0.8'
+    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
+    implementation 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
+    implementation 'com.wunderlist:sliding-layer:1.2.5'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
 
-    compile 'com.android.support:multidex:1.0.0'
+    implementation 'com.android.support:multidex:1.0.0'
 
 
     implementation 'com.wajahatkarim3.easyflipviewpager:easyflipviewpager:1.0.0'
@@ -139,12 +139,14 @@ dependencies {
 
     implementation 'com.ramotion.foldingcell:folding-cell:1.2.3'
 
-    compile 'com.diegodobelo.expandingview:expanding-view:0.9.4'
+    implementation 'com.diegodobelo.expandingview:expanding-view:0.9.4'
 
     implementation 'com.tapadoo.android:alerter:5.1.2'
 
     implementation "com.github.skydoves:expandablelayout:1.0.3"
     implementation "com.github.skydoves:baserecyclerviewadapter:0.1.3"
 
-    compile 'com.agilie:interface-interaction:1.0'
+    implementation 'com.agilie:interface-interaction:1.0'
+
+    implementation 'com.github.Chrisvin:RubberPicker:v1.5'
 }
