Folding tab bar Code frag added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,4 +150,5 @@ dependencies {
 
     implementation 'com.github.Chrisvin:RubberPicker:v1.5'
     implementation 'com.github.Yalantis:Context-Menu.Android:1.1.4'
+    implementation 'com.github.Yalantis:OfficialFoldingTabBar.Android:0.9'
 }
